<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="229dp"
        android:layout_marginEnd="182dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/but_four"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/four"
        app:layout_constraintEnd_toEndOf="@+id/but_seven"
        app:layout_constraintStart_toStartOf="@+id/but_seven"
        app:layout_constraintTop_toBottomOf="@+id/but_seven" />

    <Button
        android:id="@+id/but_one"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/one"
        app:layout_constraintEnd_toEndOf="@+id/but_seven"
        app:layout_constraintStart_toStartOf="@+id/but_seven"
        app:layout_constraintTop_toBottomOf="@+id/but_four" />

    <Button
        android:id="@+id/button_decimal"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/decimal"
        app:layout_constraintEnd_toEndOf="@+id/but_seven"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/but_seven"
        app:layout_constraintTop_toBottomOf="@+id/but_one" />

    <Button
        android:id="@+id/but_seven"
        style="@style/newSW300"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/but_clearView" />

    <Button
        android:id="@+id/but_clearView"
        style="@style/newSW300"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="@+id/but_seven"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_duzhky"
        style="@style/newSW300"
        android:layout_height="wrap_content"
        android:text="( )"
        app:layout_constraintStart_toStartOf="@+id/button_eight"
        app:layout_constraintTop_toTopOf="@+id/but_clearView" />

    <Button
        android:id="@+id/but_percent"
        style="@style/newSW300"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/percent"
        app:layout_constraintStart_toStartOf="@+id/but_nine"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_divide"
        style="@style/newSW300"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/divide"
        app:layout_constraintStart_toStartOf="@+id/but_multiply"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/but_multiply"
        style="@style/newSW300"
        android:layout_width="65dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/multiply"
        app:layout_constraintStart_toStartOf="@+id/but_minus"
        app:layout_constraintTop_toBottomOf="@+id/but_divide" />

    <Button
        android:id="@+id/but_minus"
        style="@style/newSW300"
        android:layout_width="65dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus"
        app:layout_constraintStart_toEndOf="@+id/but_percent"
        app:layout_constraintTop_toBottomOf="@+id/but_multiply" />

    <Button
        android:id="@+id/but_plus"
        style="@style/newSW300"
        android:layout_width="65dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/plus"
        app:layout_constraintStart_toStartOf="@+id/but_minus"
        app:layout_constraintTop_toBottomOf="@+id/but_minus" />

    <Button
        android:id="@+id/but_down"
        style="@style/newSW300"
        android:layout_width="65dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="@+id/but_plus"
        app:layout_constraintStart_toStartOf="@+id/but_plus"
        app:layout_constraintTop_toBottomOf="@+id/but_plus" />

    <Button
        android:id="@+id/button_eight"
        style="@style/newSW300"
        android:layout_width="65dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="6dp"
        android:text="@string/eight"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/but_seven" />

    <Button
        android:id="@+id/but_five"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/five"
        app:layout_constraintEnd_toEndOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/but_two"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/two"
        app:layout_constraintEnd_toEndOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/but_five" />

    <Button
        android:id="@+id/button_zero"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/but_two" />

    <Button
        android:id="@+id/but_nine"
        style="@style/newSW300"
        android:layout_width="65dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="6dp"
        android:text="@string/nine"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/but_seven" />

    <Button
        android:id="@+id/but_six"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/six"
        app:layout_constraintEnd_toEndOf="@+id/but_nine"
        app:layout_constraintStart_toStartOf="@+id/but_nine"
        app:layout_constraintTop_toBottomOf="@+id/but_nine" />

    <Button
        android:id="@+id/but_three"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:text="@string/three"
        app:layout_constraintEnd_toEndOf="@+id/but_six"
        app:layout_constraintStart_toStartOf="@+id/but_nine"
        app:layout_constraintTop_toBottomOf="@+id/but_six" />

    <Button
        android:id="@+id/button_dzero"
        style="@style/newSW300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dzero"
        app:layout_constraintEnd_toEndOf="@+id/but_three"
        app:layout_constraintStart_toStartOf="@+id/but_nine"
        app:layout_constraintTop_toBottomOf="@+id/but_three" />

</androidx.constraintlayout.widget.ConstraintLayout>