<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0b3954">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="398dp"
        android:layout_height="215dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcValue">

        <Button
            android:id="@+id/sqrRoot"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/square_root"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="√" />

        <Button
            android:id="@+id/sqr"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:text="@string/Square"
            app:layout_constraintBottom_toBottomOf="@+id/sqrRoot"
            app:layout_constraintStart_toEndOf="@+id/sqrRoot"
            app:layout_constraintTop_toTopOf="@+id/sqrRoot"
            tools:text="n² " />

        <Button
            android:id="@+id/pov"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:text="@string/Exponent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/sqr"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <Button
            android:id="@+id/logButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:text="@string/logStr"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/pov"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/percentButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:text="@string/percent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/logButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clearCalcValue"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/percentButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/multiplyButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sqrRoot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:text="*" />

        <Button
            android:id="@+id/divideButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/sqr"
            app:layout_constraintStart_toStartOf="@+id/sqr"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:text="÷" />

        <Button
            android:id="@+id/plusButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/pov"
            app:layout_constraintStart_toStartOf="@+id/pov"
            app:layout_constraintTop_toTopOf="@+id/divideButton"
            tools:text="+" />

        <Button
            android:id="@+id/minusButton"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/logButton"
            app:layout_constraintStart_toStartOf="@+id/logButton"
            app:layout_constraintTop_toBottomOf="@+id/logButton"
            tools:text="-" />

        <Button
            android:id="@+id/calculateResult"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clearCalcValue"
            app:layout_constraintStart_toStartOf="@+id/percentButton"
            app:layout_constraintTop_toBottomOf="@+id/logButton"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/rightBracket"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:text="@string/rightBracket"
            app:layout_constraintEnd_toEndOf="@+id/clearCalcValue"
            app:layout_constraintStart_toStartOf="@+id/clearCalcValue"
            app:layout_constraintTop_toBottomOf="@+id/logButton" />

        <Button
            android:id="@+id/leftBracket"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/leftBracket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/clearCalcValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/clearCalcValue"
            app:layout_constraintTop_toBottomOf="@+id/rightBracket" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/calcValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#bbbdf6"
        android:ems="10"
        android:inputType="none"
        android:lines="1"
        android:padding="4dp"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textDirection="ltr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcResult"
        tools:text="22" />

    <TextView
        android:id="@+id/calcResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#bbbdf6"
        android:ems="10"
        android:inputType="none"
        android:lines="1"
        android:padding="4dp"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textDirection="ltr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="111" />

    <Button
        android:id="@+id/zero"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/one"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/one"
        app:layout_constraintEnd_toEndOf="@+id/zero"
        app:layout_constraintStart_toStartOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/four"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/four"
        app:layout_constraintEnd_toEndOf="@+id/one"
        app:layout_constraintStart_toStartOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/two"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@+id/one"
        app:layout_constraintStart_toStartOf="@+id/five"
        app:layout_constraintTop_toTopOf="@+id/one" />

    <Button
        android:id="@+id/three"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/two"
        app:layout_constraintEnd_toEndOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/two" />

    <Button
        android:id="@+id/dzero"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#bbbdf6"
        android:text="@string/dzero"
        app:layout_constraintBottom_toBottomOf="@+id/zero"
        app:layout_constraintEnd_toEndOf="@+id/two"
        app:layout_constraintTop_toTopOf="@+id/zero" />

    <Button
        android:id="@+id/five"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#bbbdf6"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@+id/four"
        app:layout_constraintStart_toStartOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/four" />

    <Button
        android:id="@+id/six"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#bbbdf6"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@+id/five"
        app:layout_constraintEnd_toEndOf="@+id/nine"
        app:layout_constraintTop_toTopOf="@+id/five" />

    <Button
        android:id="@+id/decimal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/decimal"
        app:layout_constraintBottom_toBottomOf="@+id/dzero"
        app:layout_constraintEnd_toEndOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/dzero"
        app:layout_constraintTop_toTopOf="@+id/dzero" />

    <Button
        android:id="@+id/seven"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/seven"
        app:layout_constraintEnd_toEndOf="@+id/four"
        app:layout_constraintStart_toStartOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <Button
        android:id="@+id/eight"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@+id/seven"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toTopOf="@+id/seven" />

    <Button
        android:id="@+id/nine"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#bbbdf6"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toTopOf="@+id/eight" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="54dp"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:orientation="vertical"
        android:textDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="356dp" />


</android.support.constraint.ConstraintLayout>